# FPLS

./: .Rhistory  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  crop_yield_analysis.py
src/fpls/: __init__.py  core.py  selection.py  utils.py  visualization.py
src/fpls.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_core.py  test_utils.py
