[build-system]
requires = ["setuptools>=61.0,<70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpls"
version = "0.2.0"
description = "Functional Partial Least Squares"
readme = "README.md"
authors = [
    {name = "Andrii Babii", email = "andrii.babii@example.com"},
    {name = "Marine Carrasco", email = "marine.carrasco@example.com"},
    {name = "Idriss Tsafack", email = "idriss.tsafack@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["functional data analysis", "functional partial least squares", "regression", "statistics"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
selection = ["statsmodels>=0.13.0"]
plotting = ["matplotlib>=3.3.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
all = ["statsmodels>=0.13.0", "matplotlib>=3.3.0"]

[project.urls]
Homepage = "https://github.com/ababii/fpls"
Documentation = "https://github.com/ababii/fpls#readme"
Repository = "https://github.com/ababii/fpls"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
